feat: clear DbInitializerByModelCreating

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ASPT-CT-LSILVA;Database=graphqlsample;Trusted_Connection=True;"
+    "DefaultConnection": "Server=ASPT-CT-LSILVA;Database=GraphQLSample;Trusted_Connection=True;"
   }
 }
